fix(accountSettings): increase z-index on new button
Because it was "hiding" below the table container

--- a/src/styles/specifics/settings/_accountSettings.sass
+++ b/src/styles/specifics/settings/_accountSettings.sass
@@ -8,6 +8,7 @@ account-settings
             top: -.35rem
             left: 19rem
             min-width: 7rem
+            z-index: 300
 
     .splitview_detail
         min-width: 40%
